[gd_scene load_steps=21 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://img/floor.png" type="Texture" id=2]
[ext_resource path="res://img/ball.png" type="Texture" id=3]
[ext_resource path="res://img/left_goal.png" type="Texture" id=4]
[ext_resource path="res://img/right_goal.png" type="Texture" id=5]
[ext_resource path="res://fonts/concert_one.fnt" type="BitmapFont" id=6]
[ext_resource path="res://scripts/timer.gd" type="Script" id=7]
[ext_resource path="res://scripts/countdown.gd" type="Script" id=8]
[ext_resource path="res://fonts/passion_one.fnt" type="BitmapFont" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 2560, 1408, 2560, 1440, 0, 1440, 0, 1408 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 0, 1504, -64, 1504, -64, -64, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 0, 0, -64, -64, 2656, -64, 2560, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( 2560, 0, 2656, -64, 2656, 1504, 2560, 1504 )

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 32.0

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( 32, 1408, 0, 1408, 0, 1152, 32, 1184 )

[sub_resource type="ConvexPolygonShape2D" id=7]

custom_solver_bias = 0.0
points = Vector2Array( 32, 1184, 0, 1152, 256, 1152, 256, 1184 )

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( 2304, 1184, 2304, 1152, 2560, 1152, 2528, 1184 )

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( 2528, 1184, 2560, 1152, 2560, 1408, 2528, 1408 )

[sub_resource type="Animation" id=10]

resource/name = "goal"
length = 0.9
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("goal_label:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.9 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("goal_label:rect/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray(  ),
"transitions": FloatArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("goal_label:text")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "G", "GO", "GOA", "GOAL", "GOAL!", "GOAL!!", "GOAL!!!", "GOAL!!!!" ]
}

[sub_resource type="Animation" id=11]

length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("countdown_label:rect/scale")
tracks/0/interp = 0
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("countdown_label:rect/size")
tracks/1/interp = 0
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 512, 384 ), Vector2( 256, 192 ), Vector2( 341, 256 ), Vector2( 512, 384 ) ]
}

[node name="main" type="Node2D"]

process/pause_mode = 1
script/script = ExtResource( 1 )

[node name="floor" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="floor"]

transform/pos = Vector2( 1280, 1424 )
transform/scale = Vector2( 4, 1 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="floor"]

build_mode = 0
polygon = Vector2Array( 0, 1408, 0, 1440, 2560, 1440, 2560, 1408 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="walls" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 3 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 4 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
collision/layers = 2
collision/mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="walls"]

build_mode = 0
polygon = Vector2Array( 0, 1504, 0, 0, 2560, 0, 2560, 1504, 2656, 1504, 2656, -64, -64, -64, -64, 1504 )
shape_range = Vector2( 0, 2 )
trigger = false
__meta__ = {
"_edit_lock_": true
}

[node name="ball" type="RigidBody2D" parent="."]

transform/pos = Vector2( 416, 672 )
input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 3
mode = 0
mass = 1.0
friction = 0.0
bounce = 0.6
gravity_scale = 20.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ball"]

texture = ExtResource( 3 )

[node name="collision" type="CollisionShape2D" parent="ball"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="left_goal" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 7 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="sprite" type="Sprite" parent="left_goal"]

transform/pos = Vector2( 128, 1280 )
texture = ExtResource( 4 )

[node name="collision" type="CollisionPolygon2D" parent="left_goal"]

visibility/visible = false
build_mode = 0
polygon = Vector2Array( 32, 1408, 32, 1184, 256, 1184, 256, 1152, 0, 1152, 0, 1408 )
shape_range = Vector2( 0, 1 )
trigger = false

[node name="right_goal" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 9 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="sprite" type="Sprite" parent="right_goal"]

transform/pos = Vector2( 2432, 1280 )
texture = ExtResource( 5 )

[node name="collision" type="CollisionPolygon2D" parent="right_goal"]

visibility/visible = false
build_mode = 0
polygon = Vector2Array( 2304, 1152, 2560, 1152, 2560, 1408, 2528, 1408, 2528, 1184, 2304, 1184 )
shape_range = Vector2( 0, 1 )
trigger = false

[node name="right_score_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2304.0
margin/top = 128.0
margin/right = 2432.0
margin/bottom = 256.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="timer_label" type="Label" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 384.0
margin/top = 128.0
margin/right = 2176.0
margin/bottom = 256.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "3:00"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="timer" type="Timer" parent="timer_label"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="countdown_label" type="Label" parent="."]

process/pause_mode = 2
editor/display_folded = true
anchor/left = 3
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -992.0
margin/top = 384.0
margin/right = -1216.0
margin/bottom = -512.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "3"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 8 )

[node name="timer" type="Timer" parent="countdown_label"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="left_score_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 128.0
margin/top = 128.0
margin/right = 256.0
margin/bottom = 256.0
custom_fonts/font = ExtResource( 6 )
custom_constants/shadow_offset_x = 10
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="winner_label" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 640.0
margin/right = 2560.0
margin/bottom = 763.0
custom_fonts/font = ExtResource( 6 )
text = "winner"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="left_pos" type="Position2D" parent="."]

transform/pos = Vector2( 512, 1280 )

[node name="right_pos" type="Position2D" parent="."]

transform/pos = Vector2( 2048, 1280 )

[node name="restart_timer" type="Timer" parent="."]

process/pause_mode = 2
process_mode = 0
wait_time = 3.0
one_shot = false
autostart = false

[node name="countdown_anim" type="AnimationPlayer" parent="."]

process/pause_mode = 2
playback/process_mode = 0
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/goal = SubResource( 10 )
anims/scale = SubResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="goal_label" type="Label" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
size_flags/stretch_ratio = 0.0
margin/left = 0.0
margin/top = 256.0
margin/right = 2560.0
margin/bottom = 512.0
custom_fonts/font = ExtResource( 9 )
text = "GOAL!!!!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="timer_label/timer" to="timer_label" method="_on_timer_timeout"]

[connection signal="timeout" from="countdown_label/timer" to="countdown_label" method="_on_timer_timeout"]

[connection signal="timeout" from="restart_timer" to="." method="_on_restart_timer_timeout"]


